Fix: Added z-index on user header menu

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -169,6 +169,7 @@
 	width:12%;
 	height: auto;
 	font-size: 14px;
+	z-index: 2;
 /*EDIT THESE TO RE-ALIGN HIDDEN BOX */
 	top: 0%;
 	left: 85%;
